k8s/balance-service-database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-service-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: balance-service-database
  template:
    metadata:
      labels:
        component: balance-service-database
    spec:
      containers:
        - name: balance-service-database
          image: mysql
          args: ["--default-authentication-plugin=mysql_native_password"]
          ports:
            - containerPort: 3306
      #     volumeMounts:
      #       - name: balance-service-database-storage
      #         mountPath: /var/lib/mysql
      # volumes:
      #   - name: balance-service-database-storage
      #     persistentVolumeClaim:
      #       claimName: database-persistent-volume-claim
