k8s/balance-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: balance-service
  template:
    metadata:
      labels:
        component: balance-service
    spec:
      containers:
        - name: balance-service
          image: rosenurkov/monetize-balance-service
          ports:
            - containerPort: 4001
