k8s/budget-service-database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-service-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: budget-service-database
  template:
    metadata:
      labels:
        component: budget-service-database
    spec:
      containers:
        - name: budget-service-database
          image: mysql
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          args: ["--default-authentication-plugin=mysql_native_password"]
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: budget-service-database-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: budget-service-database-storage
          persistentVolumeClaim:
            claimName: budget-service-database-persistent-volume-claim
