k8s/budget-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: budget-service
  template:
    metadata:
      labels:
        component: budget-service
    spec:
      containers:
        - name: budget-service
          image: rosenurkov/monetize-budget-service
          ports:
            - containerPort: 4002
