k8s/api-gateway-database-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-database-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api-gateway-database
  ports:
    - port: 3306
      targetPort: 3306
