k8s/balance-service-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: balance-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: balance-service
  ports:
    - port: 4001
      targetPort: 4001
