k8s/balance-service-database-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: balance-service-database-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: balance-service-database
  ports:
    - port: 3306
      targetPort: 3306
