k8s/budget-service-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: budget-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: budget-service
  ports:
    - port: 4002
      targetPort: 4002
