k8s/statistics-service-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: statistics-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: statistics-service
  ports:
    - port: 4003
      targetPort: 4003
