k8s/statistics-service-database-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: statistics-service-database-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: statistics-service-database
  ports:
    - port: 6379
      targetPort: 6379
