k8s/web-client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web-client
  ports:
    - port: 3000
      targetPort: 3000
